chore: fix swagger and some user structures
